sql-common/client.c
@@ -3657,7 +3657,7 @@ error:
     end_server(mysql);
     mysql_close_free(mysql);
     if (!(client_flag & CLIENT_REMEMBER_OPTIONS) &&
-        !mysql->options.extension->async_context)
+        !(mysql->options.extension && mysql->options.extension->async_context))
       mysql_close_free_options(mysql);
   }
   DBUG_RETURN(0);
